===================================

Version

- TSDuck now fully handles DVB character sets in signalization. All textual
  display (tsanalyze, tstables, etc.) are produced in UTF-8 format, with
  characters properly translated from DVB character encoding. The table
  compiler, tstabcomp, properly translates from UTF-8 XML files to DVB
  character encoding and vice versa.

- Added t2mi plugin to extract encapsulated TS packets from T2-MI streams
  (DVB-T2 Modulator Interface).

- Added options --default-charset and --europe to tspsi, tstables, tstabdump,
  tstabcomp, plugin psi and plugin tables.

Version 3.3-20170930

- Added option --default-pds to tspsi, tstables, tstabdump, plugin psi
  and plugin tables.

- Added option --interval to plugin count.

- Fixed timer issues on Linux, typically seen in plugin regulate.

- Removed command tsgentab and associated plugins. This command is now
  obsolete and has been superseded by the more general tstabcomp, the
  PSI/SI table compiler.

Version 3.3-20170915

- Added command tstabcomp, the PSI/SI table compiler from/to XML files.
  The command tsgentab is now deprecated and will be removed in some
  future version.

Version 3.2-20170911

- Added option --pid to plugin descrambler.

- Improved robustness of option --poll-file ('inject' plugin). Mitigate
  possible race condition when the plugin tries to open a section file
  while it is created/copied by the user. Now retry later.

- Improved robustness of DVB tuner reception on Windows. Explicitly
  resynchronizes on valid packets when the driver misses data.

- Adjusted output of tslsdvb on Windows to better identify tuner names.

- Integrated Dektec DTAPI v5.27.0.97 (Dektec SDK v2017.08.0) on pre-built
  binaries for Windows and Linux.

Version 3.2-20170528

- Added option --poll-file to inject plugin.

- Bug fix: In tstables and tables plugin, the option --max-tables was not
  accurate when several small tables (eg. EMM's) were packed in the same